# rust-telegram-playground

./: .gitignore  Cargo.toml  LICENSE  Readme.md  diesel.toml  docker-build.sh  docker-health.sh  docker-run.sh
.ci/: cargo-deny-config.toml
.github/workflows/: build.yaml
deploy/: playbook-plain.yml
deploy/templates/: systemd.service.yml.j2
docker/addfromhost/: Dockerfile  Dockerfile.dockerignore  docker-compose.yml
migrations/2024-02-19-213840_users/: up.sql
resources/: bot_healthy.json  bot_healthy_running.json
src/: main.rs
src/bot/: admin.rs  mod.rs  schema.rs  start.rs
src/bot/admin/: mod.rs
src/bot/core/: dispatch.rs  healthcheck.rs  mod.rs  util.rs
src/bot/core/bot_config/: mod.rs  storage.rs  webhook.rs
src/bot/core/db/: admin.rs  client.rs  connection.rs  mod.rs  model.rs  schema.rs  user_representation.rs
src/bot/core/db/client/: admin_client.rs  list_client.rs  mod.rs
src/bot/core/healthcheck/: bot_identity.rs  endpoint.rs  mod.rs  task.rs  webhook_info.rs
src/bot/core/healthcheck/tasks/: mod.rs  own_health_endpoint.rs  webhook.rs
src/bot/handlers/: alias.rs  broadcast.rs  mod.rs  product.rs  register.rs  search.rs
