[package]
name = "rust-telegram-alias-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.6.6"
clap = { version = "4.5.0", features = ["derive", "wrap_help", "env"] }
diesel = { version = "2.1.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2.1.0"
diesel-enum = "0.2.1"
dotenvy = "0.15.7"
libsqlite3-sys = { version = "0.24.2", features = ["bundled"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = [] }
r2d2 = { version = "0.8.10" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
shadow-rs = "0.27.1"
teloxide = { version = "0.12.2", features = ["ctrlc_handler", "macros", "webhooks-axum", "sqlite-storage", "bincode-serializer"] }
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "ansi", "tracing-log"] }
chrono = "0.4.33"

[build-dependencies]
shadow-rs = "0.27.1"
