[package]
name = "rust-telegram-alias-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
# use same axum version as teloxide
axum = "0.7.5"
clap = { version = "4.5.0", features = ["derive", "wrap_help", "env"] }
diesel = { version = "2.1.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2.1.0"
diesel-enum = "0.2.1"
dotenvy = "0.15.7"
# use same axum version as teloxide
libsqlite3-sys = { version = "^0.30.1", features = ["bundled"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
# use same axum version as teloxide
reqwest = { version = "0.12.7", features = [] }
r2d2 = { version = "0.8.10" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.128"
shadow-rs = "0.35.0"
#teloxide = { version = "0.13.0", features = ["ctrlc_handler", "macros", "webhooks-axum", "sqlite-storage-nativetls", "bincode-serializer"] }
teloxide = { git = "https://github.com/teloxide/teloxide/", rev = "cfedb585d35f17ead3101456428c3357aae610ed", features = ["ctrlc_handler", "macros", "webhooks-axum", "sqlite-storage-nativetls", "bincode-serializer"] }
thiserror = "1.0.56"
# use same axum version as teloxide
tokio = { version = "1.39.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "ansi", "tracing-log"] }
chrono = "0.4.33"

[build-dependencies]
shadow-rs = "0.35.0"
